[package]
name = "auto_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
fxhash = "*"
rand = "*"
criterion = {version = "*", optional = true}

[features]
benchmarks = ["dep:criterion"]

[[bench]]
name = "benchmarks"
harness = false